added console output.

--- a/frontend/src/app/codeeditor/codeeditor.component.html
+++ b/frontend/src/app/codeeditor/codeeditor.component.html
@@ -5,7 +5,7 @@
         </mat-sidenav>
         <mat-sidenav-content>
             <app-codearea #codearea></app-codearea>
-            <div id="consoleoutput"></div>
+            <app-codeoutputarea></app-codeoutputarea>
         </mat-sidenav-content>
     </mat-sidenav-container>
 </div>
