--- a/frontend/src/app/codeeditor/codeeditor.component.scss
+++ b/frontend/src/app/codeeditor/codeeditor.component.scss
@@ -1,3 +1,5 @@
+$codeeditor_percent: 80%;
+
 :host,
 #codeeditor {
     display: block;
@@ -22,4 +24,14 @@ mat-sidenav-container {
 
 #codeeditor mat-sidenav-content {
     width: 90%;
+}
+
+app-codeoutputarea {
+    width: 100%;
+    height: calc( 100% - #{$codeeditor_percent} );
+    display: block;
+}
+
+app-codearea {
+    height: $codeeditor_percent;
 }
