--- a/frontend/src/app/codeeditor/codeeditor.component.html
+++ b/frontend/src/app/codeeditor/codeeditor.component.html
@@ -2,6 +2,7 @@
     <app-topmenus (runCommand)="runCommand($event)"></app-topmenus>
     <mat-sidenav-container hasBackdrop="false">
         <mat-sidenav mode="push" #sidenav>
+            <app-file-list></app-file-list>
         </mat-sidenav>
         <mat-sidenav-content>
             <app-codearea #codearea></app-codearea>
