--- a/frontend/src/app/file-list/file-list.component.html
+++ b/frontend/src/app/file-list/file-list.component.html
@@ -1,14 +1,14 @@
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
     <!-- This is the tree node template for leaf nodes -->
-    <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
+    <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding matTreeNodePaddingIndent="15" class="tree_node">
         <!-- use a disabled button to provide padding for tree leaf -->
-        <a mat-icon-button disabled style="padding-left: 1ch;"> </a>
+        <a mat-icon-button disabled style="padding-left: 16px;"> </a>
         {{node.name}}
     </mat-tree-node>
 
     <!-- This is the tree node template for expandable nodes -->
-    <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding>
-    <a matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.name">
+    <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding matTreeNodePaddingIndent="15" class="tree_node expandable" >
+    <a matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.name" class="tree_node_button">
         {{treeControl.isExpanded(node) ? '-' : '+'}}
     </a>
     {{node.name}}
