changed all styles and ids to kebab case.

--- a/frontend/src/app/codearea/codearea.component.html
+++ b/frontend/src/app/codearea/codearea.component.html
@@ -1,8 +1,8 @@
-<div id="codearea">
-    <div id="linenumbers" >
+<div id="code-area">
+    <div id="line-numbers" >
         <p *ngFor="let line of code; index as i" [ngClass]="{'current': i==cursorLine}">{{ i+1 }}</p>
     </div>
-    <div (paste)="onPaste($event)" (keydown)="onPress($event)" tabIndex="0" id="codeinputarea">
+    <div (paste)="onPaste($event)" (keydown)="onPress($event)" tabIndex="0" id="code-input-area">
         <pre *ngFor="let line of code; index as i"><span id="cursor" [ngStyle]="{ 'left': cursorChar + 'ch' }"
                 *ngIf="i==cursorLine">|</span>{{line}}</pre>
     </div>
