--- a/frontend/src/app/codeeditor/codeeditor.component.html
+++ b/frontend/src/app/codeeditor/codeeditor.component.html
@@ -1,4 +1,4 @@
-<div id="codeeditor">
+<div id="code-editor">
     <app-topmenus (runCommand)="runCommand($event)"></app-topmenus>
     <mat-sidenav-container hasBackdrop="false">
         <mat-sidenav mode="push" #sidenav>
