--- a/frontend/src/app/file-list/file-list.component.html
+++ b/frontend/src/app/file-list/file-list.component.html
@@ -2,13 +2,18 @@
     <!-- This is the tree node template for leaf nodes -->
     <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding matTreeNodePaddingIndent="15" class="tree-node">
         <!-- use a disabled button to provide padding for tree leaf -->
-        <a mat-icon-button>{{node.name}}</a>
+        <a mat-icon-button>
+            <mat-icon [inline]="true" class="mat-icon-rtl-mirror">text_snippet</mat-icon>
+            {{node.name}}
+        </a>
     </mat-tree-node>
 
     <!-- This is the tree node template for expandable nodes -->
     <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding matTreeNodePaddingIndent="15" class="tree-node expandable" >
     <a matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.name" class="tree-node-button">
-        {{treeControl.isExpanded(node) ? '-' : '+'}}
+        <mat-icon [inline]="true" class="mat-icon-rtl-mirror md-18">
+            {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+          </mat-icon>
         {{node.name}}
     </a>
     </mat-tree-node>
