we dont need save buttons as of now.

--- a/frontend/src/app/file-list/file-list.component.html
+++ b/frontend/src/app/file-list/file-list.component.html
@@ -6,9 +6,9 @@
             <mat-icon [inline]="true" class="mat-icon-rtl-mirror">text_snippet</mat-icon>
             {{node.name}}
         </a>
-        <a mat-icon-button class="save-button">
+        <!-- <a mat-icon-button class="save-button">
             <mat-icon [inline]="true" class="mat-icon-rtl-mirror">save</mat-icon>
-        </a>
+        </a> -->
     </mat-tree-node>
 
     <!-- This is the tree node template for expandable nodes -->
