added panels for console output and macros.

--- a/frontend/src/app/codeeditor/codeeditor.component.html
+++ b/frontend/src/app/codeeditor/codeeditor.component.html
@@ -6,7 +6,7 @@
         </mat-sidenav>
         <mat-sidenav-content>
             <app-codearea #codearea></app-codearea>
-            <app-codeoutputarea></app-codeoutputarea>
+            <app-bottom-pannel></app-bottom-pannel>
         </mat-sidenav-content>
     </mat-sidenav-container>
 </div>
