added tab to register new macros.

--- a/frontend/src/app/bottom-pannel/bottom-pannel.component.html
+++ b/frontend/src/app/bottom-pannel/bottom-pannel.component.html
@@ -3,6 +3,6 @@
         <app-codeoutputarea></app-codeoutputarea>
     </mat-tab>
     <mat-tab label="Macros">
-
+        <app-macro-panel></app-macro-panel>
     </mat-tab>
 </mat-tab-group>
