made it possible to remove macros from the browser.

--- a/frontend/src/app/macro-panel/macro-panel.component.html
+++ b/frontend/src/app/macro-panel/macro-panel.component.html
@@ -22,6 +22,7 @@
             <td class="path">{{macro.path}}</td>
             <td class="edit">
                 <button (click)="showEditMacro(index)">Edit</button>
+                <button (click)="showConfirmDelete(index)">Delete</button>
             </td>
         </ng-template>
     </tr>
