--- a/frontend/src/app/bottom-pannel/bottom-pannel.component.html
+++ b/frontend/src/app/bottom-pannel/bottom-pannel.component.html
@@ -5,4 +5,7 @@
     <mat-tab label="Macros">
         <app-macro-panel></app-macro-panel>
     </mat-tab>
+    <mat-tab label="Record">
+        <app-record-tab></app-record-tab>
+    </mat-tab>
 </mat-tab-group>
