fixed inconsistencies in naming components.

--- a/frontend/src/app/bottom-pannel/bottom-pannel.component.html
+++ b/frontend/src/app/bottom-pannel/bottom-pannel.component.html
@@ -1,6 +1,6 @@
 <mat-tab-group id="bottom-panel-tabs">
     <mat-tab label="Output">
-        <app-codeoutputarea></app-codeoutputarea>
+        <app-code-output-area></app-code-output-area>
     </mat-tab>
     <mat-tab label="Macros">
         <app-macro-panel></app-macro-panel>
