--- a/frontend/src/app/code-editor/code-editor.component.scss
+++ b/frontend/src/app/code-editor/code-editor.component.scss
@@ -7,7 +7,7 @@ $code-editor_percent: 80%;
     height: 100%;
 }
 
-app-topmenus {
+app-top-menus {
     height: 1.5em;
     width: 100%;
     display: block;
@@ -32,6 +32,6 @@ app-bottom-pannel {
     display: block;
 }
 
-app-codearea {
+app-code-area {
     height: $code-editor_percent;
 }
