made it so the recording is transformed into code and added to the file.

--- a/frontend/src/app/bottom-pannel/bottom-pannel.component.html
+++ b/frontend/src/app/bottom-pannel/bottom-pannel.component.html
@@ -6,6 +6,6 @@
         <app-macro-panel></app-macro-panel>
     </mat-tab>
     <mat-tab label="Record">
-        <app-record-tab></app-record-tab>
+        <app-record-tab (recorded)="onRecorded($event)"></app-record-tab>
     </mat-tab>
 </mat-tab-group>
