made it possible to move the cursor in the editor by clicking with the mouse.

--- a/frontend/src/app/code-area/code-area.component.scss
+++ b/frontend/src/app/code-area/code-area.component.scss
@@ -20,6 +20,10 @@
     font-family: "Source Code Pro", monospace;
 }
 
+#code-area pre {
+    width: max-content;
+}
+
 #line-numbers {
     color: grey;
     border-right: 1px solid grey;
