--- a/frontend/src/app/code-area/code-area.component.html
+++ b/frontend/src/app/code-area/code-area.component.html
@@ -2,7 +2,7 @@
     <div id="line-numbers" >
         <p *ngFor="let line of code; index as i" [ngClass]="{'current': i==cursorLine}">{{ i+1 }}</p>
     </div>
-    <div (paste)="onPaste($event)" (keydown)="onPress($event)" tabIndex="0" id="code-input-area">
+    <div #lineContainer (click)="onClick($event)" (paste)="onPaste($event)" (keydown)="onPress($event)" tabIndex="0" id="code-input-area">
         <pre *ngFor="let line of code; index as i"><span id="cursor" [ngStyle]="{ 'left': cursorChar + 'ch' }"
                 *ngIf="i==cursorLine">|</span>{{line}}</pre>
     </div>
