made it possible to print images to the console.

--- a/frontend/src/app/code-output-area/code-output-area.component.html
+++ b/frontend/src/app/code-output-area/code-output-area.component.html
@@ -1,3 +1,7 @@
 <div id="console-output">
-    <p *ngFor="let line of lines">{{line}}</p>
+    <ng-container *ngFor="let output of console">
+        <span *ngIf="output.type=='string'">{{output.message}}</span>
+        <img *ngIf="output.type=='image'" src="{{output.message}}" />
+        <br />
+    </ng-container>
 </div>
