--- a/frontend/src/app/code-output-area/code-output-area.component.scss
+++ b/frontend/src/app/code-output-area/code-output-area.component.scss
@@ -1,3 +1,13 @@
+#console-output {
+    position: relative;
+    height: 100%;
+    width:100%;
+}
+
 #console-output p {
     margin: 0;
+}
+
+#console-output img{
+    max-height: 90%;
 }
