--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
 <router-outlet></router-outlet>
 <app-modal-confirm></app-modal-confirm>
 <app-modal-input></app-modal-input>
+<app-modal-image></app-modal-image>
