added code to download printed image.

--- a/frontend/src/app/modal-image/modal-image.component.html
+++ b/frontend/src/app/modal-image/modal-image.component.html
@@ -1,4 +1,5 @@
 <app-modal-root [isShowing]="isShowing" (cancel)="cancel()">
         <img src="{{image}}" (mousemove)="onMouseMove($event)" (click)="onMouseClick()" />
         <p #coords>Coordinates: {{coord.x}}x{{coord.y}} (Click to copy)</p>
+        <button (click)="downloadImage()">Download Image</button>
 </app-modal-root>
